tests/compile_errors/out-last-statement.buzz
// Code will never be reached
test "out must be last statement" {
    from {
        out "i should be last";
        "hello world";
    };
}
